--- a/src/components/chat/Chat.scss
+++ b/src/components/chat/Chat.scss
@@ -12,8 +12,8 @@
 }
 
 .chat-input:focus {
-  border:none;
-  outline:none;
+  border: none;
+  outline: none;
   box-shadow: none;
 }
 
@@ -64,5 +64,6 @@
   color: white;
   width: 100px;
   height: 50px;
-  margin-right:5px;
+  margin-right: 5px;
+  background-color: #9984d4;
 }
