--- a/src/components/signout/Signout.scss
+++ b/src/components/signout/Signout.scss
@@ -12,3 +12,9 @@
   background-color: #9984d4;
   color: whitesmoke;
 }
+
+@media screen and (max-width: 480px) {
+  .signout-container {
+    height: 100px;
+  }
+}
